Added empty classes to main.css

--- a/finalproject/site/index.html
+++ b/finalproject/site/index.html
@@ -40,6 +40,7 @@
                 <input class="login" placeholder="Email"></input>
                 <input class="login" id="login-pwd" placeholder="Password"></input>
                 <div class="submitbtn">Submit</div>
+                <!--FACEBOOK LOGIN-->
                 <div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="false"></div>
             </div>
 
@@ -49,8 +50,8 @@
             </div>
 
             <div class="musiciancontainer">
-                <div class="musician-column-container">
-                    <div class="musician-column1">
+                <div class="user-column-container">
+                    <div class="column1">
                         <input class="signuptextsm" placeholder="First Name"></input>
                         <input class="signuptextsm" placeholder="City"></input>
                         <input class="signuptextsm" placeholder="Age"></input>
@@ -60,7 +61,7 @@
                         <div class="dropdown">Vehicle</div>
                         <div class="dropdown">Practice Space?</div>
                     </div>
-                    <div class="musician-column2">
+                    <div class="column2">
                         <input class="signuptextsm" placeholder="Last Name"></input>
                         <div class="dropdown">State</div>
                         <div class="dropdown">Primary Instrument</div>
@@ -74,8 +75,8 @@
             </div>
 
             <div class="bandcontainer">
-                <div class="band-column-container">
-                    <div class="band-column1">
+                <div class="user-column-container">
+                    <div class="column1">
                         <input class="signuptextsm" placeholder="Band Name"></input>
                         <div class="dropdown">State</div>
                         <div class="dropdown">Genre 2</div>
@@ -83,7 +84,7 @@
                         <div class="dropdown">Preferred Work Schedule</div>
                         <input class="signuptextsm" placeholder="Preferred Age Range"></input>
                     </div>
-                    <div class="band-column2">
+                    <div class="column2">
                         <input class="signuptextsm" placeholder="City"></input>
                         <div class="dropdown">Genre 1</div>
                         <div class="dropdown">Genre 3</div>
@@ -97,9 +98,9 @@
             <div class="signup-bottom-container">
                     <input class="signuptextlg" placeholder="Briefly describe your gear."></input>
                     <input class="signuptextlg" placeholder="Any extra notes?"></input>
-                    <input class="signuptextlg" placeholder="Email"></input>
-                    <input class="signuptextlg" id="signup-pwd"placeholder="Password"></input>
-                    <input class="signuptextlg" id="signup-pwd-conf"placeholder="Password Confirmation"></input>
+                    <input class="signuptextmed" placeholder="Email"></input>
+                    <input class="signuptextmed" id="signup-pwd"placeholder="Password"></input>
+                    <input class="signuptextmed" id="signup-pwd-conf" placeholder="Password Confirmation"></input>
                     <!--Photo Upload-->
                     <!--Soundcloud-->
             </div>
