Added initial styling.

--- a/finalproject/site/browseview.html
+++ b/finalproject/site/browseview.html
@@ -9,9 +9,11 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
-
+        <!-- GOOGLE FONTS -->
+        <link href='https://fonts.googleapis.com/css?family=Contrail+One|Passion+One|Monoton' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.6.1/less.min.js"></script>
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -29,16 +31,18 @@
     <div class="page">
 
         <div class="browsecontainer">
-            <div class="browse-column-west">
-                <div class="mainlogo">In The Van</div>
-                <div class="infosmall1"><!--(BAND) NAME--></div>
+            <div class="browse-column1">
+                <div class="mainlogo">
+                    <h1>InTheVan</h1>
+                </div>
+                <div class="infosmall1"><h2><!--(BAND) NAME--></h2></div>
                 <div class="infosmall2"><!--CITY, STATE--></div>
                 <div class="imgbig"><!--PROFILE PICTURE--></div>
                 <!--SOUNDCLOUD LINK; WILL LIKELY CHANGE TO EMBEDDED PLAYER-->
                 <div class="soundcloud"><iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fundefined&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe></div>
             </div>
 
-            <div class="browse-column-east"></div>
+            <div class="browse-column2"></div>
                 <div class="imgsmall"></div>
                 <div class="infosmall3"></div>
                 <div class="infobig"></div>
