--- a/finalproject/site/index.html
+++ b/finalproject/site/index.html
@@ -32,7 +32,7 @@
 
         <div class="homecontainer clearfix">
             <div class="mainlogo">
-                <h1>InTheVan</h1>
+                <h1>seeking</h1>
             </div>
             <div class="imgbig"></div>
             <div class="btncontainer clearfix">
