--- a/finalproject/site/browseview.html
+++ b/finalproject/site/browseview.html
@@ -33,7 +33,7 @@
         <div class="browsecontainer">
             <div class="browse-column1">
                 <div class="mainlogo">
-                    <h1>InTheVan</h1>
+                    <h1>seeking</h1>
                 </div>
                 <div class="infosmall1"><h2><!--(BAND) NAME--></h2></div>
                 <div class="infosmall2"><!--CITY, STATE--></div>
