Added SVGs, built user type select page.

--- a/finalproject/site/login.html
+++ b/finalproject/site/login.html
@@ -24,7 +24,9 @@
         
         <!--LOGIN FORM-->
     <div class="logincontainer clearfix">
-        <div class="loginlogo"><h1>seeking</h1></div>
+         <div class="login-logo-container">
+            <img class="imgmed" src="img/Slogomark.svg"></img>
+        </div>
         <div class="form">
         <!--<form action>-->    
             <ul class="form-column loginform-column">
@@ -41,6 +43,7 @@
         </div>
     </div>
     <div class="submitbtn"><h2>Log in</h2></div>
+</div>
 
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
