--- a/finalproject/site/musiciansignup.html
+++ b/finalproject/site/musiciansignup.html
@@ -22,23 +22,32 @@
 
 <div class="page">
 
-    <!--TOP SECTION OF PAGE-->
-    <div class="homecontainer-north clearfix">
-        <div class="mainlogo">
-            <img src="img/testlogo.svg"></img>
+    <!--MUSICIAN SIGNUP-->
+    <div class="musiciancontainer clearfix">
+        <div class="login-signup-header clearfix"><img class="imgsmall1" src="img/testlogo.svg"></img></div>
+        <div class="user-column-container clearfix">
+            <div class="column1 clearfix">
+                <input class="signuptextsm" placeholder="First Name"></input>
+                <input class="signuptextsm" placeholder="City"></input>
+                <input class="signuptextsm" placeholder="Age"></input>
+                <div class="dropdown">Instrument 2</div>
+                <div class="dropdown">Genre 1</div>
+                <div class="dropdown">Genre 3</div>
+                <div class="dropdown">Vehicle</div>
+                <div class="dropdown">Practice Space?</div>
+            </div>
+            <div class="column2 clearfix">
+                <input class="signuptextsm" placeholder="Last Name"></input>
+                <div class="dropdown">State</div>
+                <div class="dropdown">Primary Instrument</div>
+                <div class="dropdown">Instrument 3</div>
+                <div class="dropdown">Genre 2</div>
+                <div class="dropdown">Genre 4</div>
+                <div class="dropdown">Work Schedule</div>
+                <div class="dropdown">Alcohol?</div>
+            </div>
         </div>
-        <img class="imgbig" src="img/Slogomark.svg"></img>
     </div>
-
-    <!--BOTTOM SECTION OF PAGE-->
-    <div class="homecontainer-south clearfix">
-        <!--LOGIN/SIGNUP BUTTONS-->
-        <div class="btncontainer clearfix">
-            <div class="btn loginbtn"><h2>Log In</h2></div>
-            <div class="btn signupbtn"><h2>Sign Up</h2></div>
-        </div>
-    </div>
-</div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
