--- a/finalproject/site/signuplast.html
+++ b/finalproject/site/signuplast.html
@@ -21,22 +21,16 @@
     <![endif]-->
 
 <div class="page">
-
-    <!--TOP SECTION OF PAGE-->
-    <div class="homecontainer-north clearfix">
-        <div class="mainlogo">
-            <img src="img/testlogo.svg"></img>
-        </div>
-        <img class="imgbig" src="img/Slogomark.svg"></img>
-    </div>
-
-    <!--BOTTOM SECTION OF PAGE-->
-    <div class="homecontainer-south clearfix">
-        <!--LOGIN/SIGNUP BUTTONS-->
-        <div class="btncontainer clearfix">
-            <div class="btn loginbtn"><h2>Log In</h2></div>
-            <div class="btn signupbtn"><h2>Sign Up</h2></div>
-        </div>
+        
+    <!--LAST PART OF SIGNUP-->
+    <div class="signup-bottom-container clearfix">
+        <input class="signuptextlg" placeholder="Briefly describe your gear."></input>
+        <input class="signuptextlg" placeholder="Any extra notes?"></input>
+        <input class="signuptextmed" placeholder="Email"></input>
+        <input class="signuptextmed" id="signup-pwd"placeholder="Password"></input>
+        <input class="signuptextmed" id="signup-pwd-conf" placeholder="Password Confirmation"></input>
+        <!--Photo Upload-->
+        <!--Soundcloud-->
     </div>
 </div>
 
