--- a/finalproject/site/userselect.html
+++ b/finalproject/site/userselect.html
@@ -22,20 +22,13 @@
 
 <div class="page">
 
-    <!--TOP SECTION OF PAGE-->
-    <div class="homecontainer-north clearfix">
-        <div class="mainlogo">
-            <img src="img/testlogo.svg"></img>
-        </div>
-        <img class="imgbig" src="img/Slogomark.svg"></img>
-    </div>
-
-    <!--BOTTOM SECTION OF PAGE-->
-    <div class="homecontainer-south clearfix">
-        <!--LOGIN/SIGNUP BUTTONS-->
-        <div class="btncontainer clearfix">
-            <div class="btn loginbtn"><h2>Log In</h2></div>
-            <div class="btn signupbtn"><h2>Sign Up</h2></div>
+    <!--USER TYPE SELECT-->
+    <div class="user-type-container clearfix">
+        <div class="login-signup-header clearfix"><img class="imgsmall1" src="img/testlogo.svg"></img></div>
+        <div class="usertypebtn-container clearfix">
+            <div class="musician-btn"><h2>Musician seeking Band</h2></div>
+            <h3>or</h3>
+            <div class="band-btn"><h2>Band seeking Musician</h2></div>
         </div>
     </div>
 </div>
