--- a/finalproject/site/bandsignup.html
+++ b/finalproject/site/bandsignup.html
@@ -22,20 +22,27 @@
 
 <div class="page">
 
-    <!--TOP SECTION OF PAGE-->
-    <div class="homecontainer-north clearfix">
-        <div class="mainlogo">
-            <img src="img/testlogo.svg"></img>
-        </div>
-        <img class="imgbig" src="img/Slogomark.svg"></img>
-    </div>
+    <!--BAND SIGNUP-->
+    <div class="bandcontainer clearfix">
+        <div class="login-signup-header"><h3>Tell us about your band</h3></div>
+        <div class="user-column-container clearfix">
+            <div class="column1 clearfix">
+                <input class="signuptextsm" placeholder="Band Name"></input>
+                <div class="dropdown">State</div>
+                <div class="dropdown">Genre 2</div>
+                <div class="dropdown">Genre 4</div>
+                <div class="dropdown">Preferred Work Schedule</div>
+                <input class="signuptextsm" placeholder="Preferred Age Range"></input>
+            </div>
 
-    <!--BOTTOM SECTION OF PAGE-->
-    <div class="homecontainer-south clearfix">
-        <!--LOGIN/SIGNUP BUTTONS-->
-        <div class="btncontainer clearfix">
-            <div class="btn loginbtn"><h2>Log In</h2></div>
-            <div class="btn signupbtn"><h2>Sign Up</h2></div>
+            <div class="column2 clearfix">
+                <input class="signuptextsm" placeholder="City"></input>
+                <div class="dropdown">Genre 1</div>
+                <div class="dropdown">Genre 3</div>
+                <div class="dropdown">Van?</div>
+                <div class="dropdown">Practice Space?</div>
+                <div class="dropdown">Alcohol/Drug Preference</div>
+            </div>
         </div>
     </div>
 </div>
