Started building signup page, profile views, built browse views.

--- a/finalproject/site/profileview-musician.html
+++ b/finalproject/site/profileview-musician.html
@@ -10,7 +10,7 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
         <!-- GOOGLE FONTS -->
-        <link href='https://fonts.googleapis.com/css?family=Contrail+One|Passion+One|Monoton' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300|Open+Sans:400,300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.6.1/less.min.js"></script>
@@ -20,31 +20,31 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <div id="fb-root"></div>
-        <script>(function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
-          fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script>
-    <div class="page">
 
-        <div class="browsecontainer">
-            <div class="browse-column1">
-                <div class="mainlogo">
-                    <h1>seeking</h1>
+    <div class="page">
+        <div class="browselogo">
+            <img src="img/testlogo.svg"></img>
+        </div>
+        <div class="profilecontainer clearfix">
+            <div class="profile-column clearfix">
+                <div class="profile-img-container">
+                    <img src="img/JCHOB.jpg"></img>
                 </div>
-                <div class="infosmall1"><h2><!--(BAND) NAME--></h2></div>
-                <div class="infosmall2"><!--CITY, STATE--></div>
-                <div class="imgbig"><!--PROFILE PICTURE--></div>
+                <div class="infosmall">
+                    <h2>Jim Howes</h2>
+                    <h3>Chicago, Illinois</h3>
+                    <ul class="profileinfo">
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="infosmall"><!--CITY, STATE--></div>
                 <!--SOUNDCLOUD LINK; WILL LIKELY CHANGE TO EMBEDDED PLAYER-->
                 <div class="soundcloud"><iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fundefined&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe></div>
             </div>
 
-            <div class="browse-column2"></div>
+            <div class="profile-column clearfix"></div>
                 <div class="imgsmall"></div>
-                <div class="infosmall3"></div>
+                <div class="infosmall"></div>
                 <div class="infobig"></div>
         </div>
 
