--- a/finalproject/site/musiciansignup.html
+++ b/finalproject/site/musiciansignup.html
@@ -23,31 +23,98 @@
 <div class="page">
 
     <!--MUSICIAN SIGNUP-->
+    <div class="login-signup-header clearfix"><img class="imgsmall1" src="img/testlogo.svg"></img></div>
     <div class="musiciancontainer clearfix">
-        <div class="login-signup-header clearfix"><img class="imgsmall1" src="img/testlogo.svg"></img></div>
-        <div class="user-column-container clearfix">
-            <div class="column1 clearfix">
-                <input class="signuptextsm" placeholder="First Name"></input>
-                <input class="signuptextsm" placeholder="City"></input>
-                <input class="signuptextsm" placeholder="Age"></input>
-                <div class="dropdown">Instrument 2</div>
-                <div class="dropdown">Genre 1</div>
-                <div class="dropdown">Genre 3</div>
-                <div class="dropdown">Vehicle</div>
-                <div class="dropdown">Practice Space?</div>
-            </div>
-            <div class="column2 clearfix">
-                <input class="signuptextsm" placeholder="Last Name"></input>
-                <div class="dropdown">State</div>
-                <div class="dropdown">Primary Instrument</div>
-                <div class="dropdown">Instrument 3</div>
-                <div class="dropdown">Genre 2</div>
-                <div class="dropdown">Genre 4</div>
-                <div class="dropdown">Work Schedule</div>
-                <div class="dropdown">Alcohol?</div>
-            </div>
+        <div class="form signupform clearfix">
+        <!--<form action>-->
+            <ul class="form-column clearfix">
+                <li>
+                    <label>First Name:</label>
+                    <input type="text" placeholder="First Name" name="firstname" id="firstname" required="">
+                </li>
+                <li>
+                    <label>City:</label>
+                    <input type="text" placeholder="City" name="city" id="city" required="">
+                </li>
+                <li>
+                    <label>Age:</label>
+                    <input type="text" placeholder="Age" name="age" id="age" required="">
+                </li>
+                <!-- MAKE THESE DROPDOWNS -->
+                <li>
+                    <label>Instrument 2:</label>
+                    <input type="text" placeholder="Instrument 2" name="instrument2" id="instrument2" required="">
+                </li>
+                <li>
+                    <label>Genre 1:</label>
+                    <input type="text" placeholder="Genre 1" name="genre1" id="genre1" required="">
+                </li>
+                <li>
+                    <label>Genre 3:</label>
+                    <input type="text" placeholder="Genre 3" name="genre3" id="genre3" required="">
+                </li>
+                <!-- BOOLEANS -->
+                <li>
+                    <label>Vehicle:</label>
+                    <input type="text" placeholder="Vehicle" name="vehicle" id="vehicle" required="">
+                </li>
+                <li>
+                    <label>Practice Space:</label>
+                    <input type="text" placeholder="Practice Space?" name="practicespace" id="practicespace" required="">
+                </li>
+                <li>
+                    <label>Alcohol:</label>
+                    <input type="text" placeholder="Alcohol" name="alcohol" id="alcohol" required="">
+                </li>
+                <li>
+                    <label>Work Schedule:</label>
+                    <input type="text" placeholder="Work Schedule" name="workschedule" id="workschedule" required="">
+                </li>
+            </ul>
+            <ul class="form-column">
+                <li>
+                    <label>Last Name:</label>
+                    <input type="text" placeholder="Last Name" name="email" id="email" required="">
+                </li>
+                <!-- MAKE THESE DROPDOWNS-->
+                <li>
+                    <label>State:</label>
+                    <input type="text" placeholder="State" name="email" id="email" required="">
+                </li>
+                <li>
+                    <label>Instrument 1:</label>
+                    <input type="text" placeholder="Primary Instrument" name="instrument1" id="instrument1" required="">
+                </li>
+                <li>
+                    <label>Instrument 3:</label>
+                    <input type="text" placeholder="Instrument 3" name="instrument3" id="instrument3" required="">
+                </li>
+                <li>
+                    <label>Genre 2:</label>
+                    <input type="text" placeholder="Genre 2" name="genre2" id="genre2" required="">
+                </li>
+                <li>
+                    <label>Genre 4:</label>
+                    <input type="text" placeholder="Genre 4" name="genre4" id="genre4" required="">
+                </li>
+                <!-- NOT DROPDOWNS -->
+                <li>
+                    <label>Email Address at Signup:</label>
+                    <input type="text" placeholder="Email" name="emailsignup" id="emailsignup" required="">
+                </li>
+                <li>
+                    <label>Password at Signup:</label>
+                    <input type="password" placeholder="Password" name="passwordsignup" id="passwordsignup">
+                </li>
+                <li>
+                    <label>Password Confirmation:</label>
+                    <input type="password" placeholder="Confirm Password" name="passwordconf" id="passwordconf">
+                </li>
+            </ul>
         </div>
     </div>
+    <div class="submitbtn"><h2>Sign up</h2></div>
+</div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
