More updates to profile view.

--- a/finalproject/site/browseview-band.html
+++ b/finalproject/site/browseview-band.html
@@ -31,7 +31,7 @@
             <div class="browsevitals">
                 <h1>Oscar Bait</h1>
                 <h3>Emo, Hardcore</h3>
-                <h4><em>91% match</em></h4>
+                <h4 class="matchblurb"><em>91% match</em></h4>
             </div>
         </div>
         <div class="viewprofile">
