--- a/finalproject/site/browseview-musician.html
+++ b/finalproject/site/browseview-musician.html
@@ -31,7 +31,7 @@
             <div class="browsevitals">
                 <h1>Jim Howes</h1>
                 <h3>Vocals, Drums</h3>
-                <h4><em>89% match</em></h4>
+                <h4 class="matchblurb"><em>89% match</em></h4>
             </div>
         </div>
         <div class="viewprofile">
