--- a/finalproject/site/profileview-musician.html
+++ b/finalproject/site/profileview-musician.html
@@ -32,26 +32,31 @@
                 </div>
                 <div class="infosmall">
                     <h2>Jim Howes</h2>
-                    <h3>Chicago, Illinois</h3>
-                    <ul class="profileinfo">
-                        <li></li>
-                    </ul>
+                    <h3>Chicago, IL</h3>
+                    <h3>Vocals, Drums</h3>
+                    <h4 class="matchblurb"><em>89% match</em></h4>
                 </div>
-                <div class="infosmall"><!--CITY, STATE--></div>
-                <!--SOUNDCLOUD LINK; WILL LIKELY CHANGE TO EMBEDDED PLAYER-->
-                <div class="soundcloud"><iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fundefined&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe></div>
             </div>
 
-            <div class="profile-column clearfix"></div>
-                <div class="imgsmall"></div>
-                <div class="infosmall"></div>
-                <div class="infobig"></div>
+            <div class="profile-column clearfix">
+                <div class="infosmall">
+                    <ul class="profileinfo">
+                        <li><strong>Age:</strong>27</li>
+                        <li><strong>Likes:</strong>Emo, Hardcore</li>
+                        <li><strong>Vehicle:</strong>No</li>
+                        <li><strong>Practice space:</strong>Yes</li>
+                        <li><strong>Alcohol:</strong>Yes</li>
+                    </ul>
+                </div>
+            </div>
         </div>
-
-        <div class="footswitchcontainer">
-            <!--INTERACTIVE "FOOTSWITCH" SELECTOR GOES HERE-->
+        <div class="soundcloud">
+            <h2>Soundcloud</h2>
         </div>
-
+        <div class="backtobrowse">
+            <h2>Back to Browse</h2>
+        </div>
+        
     </div>
 
 
