Finished up profile views.

--- a/finalproject/site/profileview-band.html
+++ b/finalproject/site/profileview-band.html
@@ -28,20 +28,20 @@
         <div class="profilecontainer clearfix">
             <div class="profile-column clearfix">
                 <div class="profile-img-container">
-                    <img src="img/JCHOB.jpg"></img>
+                    <img src="img/oscarbait.jpg"></img>
                 </div>
                 <div class="infosmall">
-                    <h2>Jim Howes</h2>
+                    <h2>Oscar Bait</h2>
                     <h3>Chicago, IL</h3>
-                    <h3>Vocals, Drums</h3>
-                    <h4 class="matchblurb"><em>89% match</em></h4>
+                    <h3>Emo, Hardcore</h3>
+                    <h4 class="matchblurb"><em>91% match</em></h4>
                 </div>
             </div>
             <div class="profile-column clearfix">
                 <div class="infosmall">
                     <ul class="profileinfo">
-                        <li><strong>Age:</strong>27</li>
-                        <li><strong>Vehicle:</strong>No</li>
+                        <li><strong>Members:</strong>4</li>
+                        <li><strong>Vehicle:</strong>Car</li>
                         <li><strong>Practice space:</strong>Yes</li>
                         <li><strong>Alcohol:</strong>Yes</li>
                     </ul>
@@ -50,16 +50,16 @@
                     <ul class="profileinfo2">
                         <h4>Favorite Bands:</h4>
                         <li>Superchunk</li>
-                        <li>The Wonder Years</li>
+                        <li>Iron Chic</li>
                         <li>Drug Church</li>
-                        <li>The Movielife</li>
-                        <li>Guided By Voices</li>
+                        <li>Hot Water Music</li>
+                        <li>Fucked Up</li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="infobig clearfix">
-            <p>Ohio transplant. Lover of good coffee and Miller Lite. Easygoing but intense. The Tim Duncan of dumpster fires. Influences as a vocalist include Vinnie Caruana, Damian Abraham, and Aaron Bedard. Influences as a drummer include Jon Wurster, George Rebelo, and Keith Moon.</p>
+            <p>The musical version of staying up all night playing Tony Hawk's Pro Skater 2. Proud inhabitants of Mosh City. Started as a side project for all and quickly became our primary concern. Currently playing the local circuit, hoping to break into the touring circuit soon. We're fun dudes and we like junk food.</p>
         </div>
         <div class="soundcloud">
             <h2>Soundcloud</h2>
