More of the build. Basically done at this point.

--- a/finalproject/site/browseview-musician.html
+++ b/finalproject/site/browseview-musician.html
@@ -34,13 +34,13 @@
                 <h4 class="matchblurb"><em>89% match</em></h4>
             </div>
         </div>
-        <div class="viewprofile">
+        <a href="profileview-musician.html"><div class="viewprofile">
             <h2>View Profile</h2>
-        </div>
+        </div></a>
         <div class="browsefooter">
             <img class="browseicon" src="img/stopbutton.png"></img>
             <img class="browseicon" src="img/playbutton.svg"></img>
-            <img class="browseicon" src="img/seekbutton.png"></img>
+            <a href="browseview-band.html"><img class="browseicon" src="img/seekbutton.png"></img></a>
         </div>
     </div>
 
