--- a/finalproject/site/index.html
+++ b/finalproject/site/index.html
@@ -34,8 +34,8 @@
     <div class="homecontainer-south clearfix">
         <!--LOGIN/SIGNUP BUTTONS-->
         <div class="btncontainer clearfix">
-            <div class="btn loginbtn"><h2>Log In</h2></div>
-            <div class="btn signupbtn"><h2>Sign Up</h2></div>
+            <a href="login.html"><div class="btn loginbtn"><h2>Log In</h2></div></a>
+            <a href="userselect.html"<div class="btn signupbtn"><h2>Sign Up</h2></div></a>
         </div>
     </div>
 </div>
