--- a/finalproject/site/login.html
+++ b/finalproject/site/login.html
@@ -42,7 +42,7 @@
             </ul>
         </div>
     </div>
-    <div class="submitbtn"><h2>Log in</h2></div>
+    <a href="browseview-musician.html"><div class="submitbtn"><h2>Log in</h2></div></a>
 </div>
 
 
