--- a/finalproject/site/profileview-band.html
+++ b/finalproject/site/profileview-band.html
@@ -64,9 +64,9 @@
         <div class="soundcloud">
             <h2>Soundcloud</h2>
         </div>
-        <div class="backtobrowse">
+        <a href="browseview-band.html"><div class="backtobrowse">
             <h2>Back to Browse</h2>
-        </div>
+        </div></a>
     </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
