--- a/finalproject/site/userselect.html
+++ b/finalproject/site/userselect.html
@@ -26,9 +26,9 @@
     <div class="user-type-container clearfix">
         <div class="login-signup-header clearfix"><img class="imgsmall1" src="img/testlogo.svg"></img></div>
         <div class="usertypebtn-container clearfix">
-            <div class="musician-btn"><h2>Musician seeking Band</h2></div>
+            <a href="musiciansignup.html"><div class="musician-btn"><h2>Musician seeking Band</h2></div></a>
             <h3>or</h3>
-            <div class="band-btn"><h2>Band seeking Musician</h2></div>
+            <a href="bandsignup.html"><div class="band-btn"><h2>Band seeking Musician</h2></div></a>
         </div>
     </div>
 </div>
