Added some initial browsing functionality in jQuery.

--- a/finalproject/site/browseview-musician.html
+++ b/finalproject/site/browseview-musician.html
@@ -29,7 +29,7 @@
                 <img src="img/JCHOB.jpg"></img>
             </div>
             <div class="browsevitals">
-                <h1>Jim Howes</h1>
+                <h1>Jim</h1>
                 <h3>Vocals, Drums</h3>
                 <h4 class="matchblurb"><em>89% match</em></h4>
             </div>
@@ -38,13 +38,11 @@
             <h2>View Profile</h2>
         </div></a>
         <div class="browsefooter">
-            <img class="browseicon" src="img/stopbutton.png"></img>
-            <img class="browseicon" src="img/playbutton.svg"></img>
+            <img class="browseicon" id="stop" src="img/stopbutton.png"></img>
+            <img class="browseicon" id="play" src="img/playbutton.svg"></img>
             <a href="browseview-band.html"><img class="browseicon" src="img/seekbutton.png"></img></a>
         </div>
     </div>
-
-
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
