--- a/finalproject/site/profileview-musician.html
+++ b/finalproject/site/profileview-musician.html
@@ -31,7 +31,7 @@
                     <img src="img/JCHOB.jpg"></img>
                 </div>
                 <div class="infosmall">
-                    <h2>Jim Howes</h2>
+                    <h2>Jim</h2>
                     <h3>Chicago, IL</h3>
                     <h3>Vocals, Drums</h3>
                     <h4 class="matchblurb"><em>89% match</em></h4>
