--- a/finalproject/site/index.html
+++ b/finalproject/site/index.html
@@ -13,6 +13,7 @@
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300|Open+Sans:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
@@ -35,7 +36,7 @@
         <!--LOGIN/SIGNUP BUTTONS-->
         <div class="btncontainer clearfix">
             <a href="login.html"><div class="btn loginbtn"><h2>Log In</h2></div></a>
-            <a href="userselect.html"<div class="btn signupbtn"><h2>Sign Up</h2></div></a>
+            <a href="userselect.html"><div class="btn signupbtn"><h2>Sign Up</h2></div></a>
         </div>
     </div>
 </div>
