IT'S THE FINAL COUNTDOWN

--- a/finalproject/site/browseview-musician-2.html
+++ b/finalproject/site/browseview-musician-2.html
@@ -26,21 +26,21 @@
         </div>
         <div class="browsecontainer">
             <div class="browse-img-container">
-                <img src="img/oscarbait.jpg"></img>
+                <img src="img/Nigel.jpg"></img>
             </div>
             <div class="browsevitals">
-                <h1>Oscar Bait</h1>
-                <h3>Emo, Hardcore</h3>
-                <h4 class="matchblurbgood"><em>91% match</em></h4>
+                <h1>Nigel</h1>
+                <h3>Guitar, Vocals</h3>
+                <h4 class="matchblurbbad"><em>23% match</em></h4>
             </div>
         </div>
-        <a href="profileview-band.html"><div class="viewprofile">
+        <a href="#"><div class="viewprofile">
             <h2>View Profile</h2>
         </div></a>
         <div class="browsefooter">
             <img class="browseicon" id="stop" src="img/stopbutton.png"></img>
             <img class="browseicon" id="play" src="img/playbutton.svg"></img>
-            <a href="browseview-band-2.html"><img class="browseicon" id="seek" src="img/seekbutton.png"></img></a>
+            <a href="userselect.html"><img class="browseicon" id="seek" src="img/seekbutton.png"></img></a>
         </div>
     </div>
 
