--- a/finalproject/site/browseview-musician.html
+++ b/finalproject/site/browseview-musician.html
@@ -31,7 +31,7 @@
             <div class="browsevitals">
                 <h1>Jim</h1>
                 <h3>Vocals, Drums</h3>
-                <h4 class="matchblurb"><em>89% match</em></h4>
+                <h4 class="matchblurbgood"><em>89% match</em></h4>
             </div>
         </div>
         <a href="profileview-musician.html"><div class="viewprofile">
@@ -40,7 +40,7 @@
         <div class="browsefooter">
             <img class="browseicon" id="stop" src="img/stopbutton.png"></img>
             <img class="browseicon" id="play" src="img/playbutton.svg"></img>
-            <a href="browseview-band.html"><img class="browseicon" src="img/seekbutton.png"></img></a>
+            <a href="browseview-musician-2.html"><img class="browseicon" id="seek" src="img/seekbutton.png"></img></a>
         </div>
     </div>
 
