--- a/browseviewband.html
+++ b/browseviewband.html
@@ -20,53 +20,28 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
     <div class="page">
         <div class="browselogo">
             <img src="img/testlogo.svg"></img>
         </div>
-        <div class="profilecontainer clearfix">
-            <div class="profile-column clearfix">
-                <div class="profile-img-container">
-                    <img src="img/oscarbait.jpg"></img>
-                </div>
-                <div class="infosmall">
-                    <h2>Oscar Bait</h2>
-                    <h3>Chicago, IL</h3>
-                    <h3>Emo, Hardcore</h3>
-                    <h4 class="matchblurb"><em>91% match</em></h4>
-                </div>
+        <div class="browsecontainer">
+            <div class="browse-img-container">
+                <img src="img/oscarbait.jpg"></img>
             </div>
-            <div class="profile-column clearfix">
-                <div class="infosmall">
-                    <ul class="profileinfo">
-                        <li><strong>Members:</strong>4</li>
-                        <li><strong>Vehicle:</strong>Car</li>
-                        <li><strong>Practice space:</strong>Yes</li>
-                        <li><strong>Alcohol:</strong>Yes</li>
-                    </ul>
-                </div>
-                <div class="infosmall">
-                    <ul class="profileinfo2">
-                        <h4>Favorite Bands:</h4>
-                        <li>Superchunk</li>
-                        <li>Iron Chic</li>
-                        <li>Drug Church</li>
-                        <li>Hot Water Music</li>
-                        <li>Fucked Up</li>
-                    </ul>
-                </div>
+            <div class="browsevitals">
+                <h1>Oscar Bait</h1>
+                <h3>Emo, Hardcore</h3>
+                <h4 class="matchblurbgood"><em>91% match</em></h4>
             </div>
         </div>
-        <div class="infobig clearfix">
-            <p>The musical version of staying up all night playing Tony Hawk's Pro Skater 2. Proud inhabitants of Mosh City. Started as a side project for all and quickly became our primary concern. Currently playing the local circuit, hoping to break into the touring circuit soon. We're fun dudes and we like junk food.</p>
-        </div>
-        <div class="soundcloud">
-            <h2>Soundcloud</h2>
-        </div>
-        <a href="browseview-band.html"><div class="backtobrowse">
-            <h2>Back to Browse</h2>
+        <a href="profileviewband.html"><div class="viewprofile">
+            <h2>View Profile</h2>
         </div></a>
+        <div class="browsefooter">
+            <img class="browseicon" id="stop" src="img/stopbutton.png"></img>
+            <img class="browseicon" id="play" src="img/playbutton.svg"></img>
+            <a href="browseviewband2.html"><img class="browseicon" id="seek" src="img/seekbutton.png"></img></a>
+        </div>
     </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
