--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
             </ul>
         </div>
     </div>
-    <a href="browseview-musician.html"><div class="submitbtn"><h2>Log in</h2></div></a>
+    <a href="browseviewmusician.html"><div class="submitbtn"><h2>Log in</h2></div></a>
 </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
