--- a/profileviewmusician.html
+++ b/profileviewmusician.html
@@ -20,28 +20,53 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
     <div class="page">
         <div class="browselogo">
             <img src="img/testlogo.svg"></img>
         </div>
-        <div class="browsecontainer">
-            <div class="browse-img-container">
-                <img src="img/JCHOB.jpg"></img>
+        <div class="profilecontainer clearfix">
+            <div class="profile-column clearfix">
+                <div class="profile-img-container">
+                    <img src="img/JCHOB.jpg"></img>
+                </div>
+                <div class="infosmall">
+                    <h2>Jim</h2>
+                    <h3>Chicago, IL</h3>
+                    <h3>Vocals, Drums</h3>
+                    <h4 class="matchblurb"><em>89% match</em></h4>
+                </div>
             </div>
-            <div class="browsevitals">
-                <h1>Jim</h1>
-                <h3>Vocals, Drums</h3>
-                <h4 class="matchblurbgood"><em>89% match</em></h4>
+            <div class="profile-column clearfix">
+                <div class="infosmall">
+                    <ul class="profileinfo">
+                        <li><strong>Age:</strong>27</li>
+                        <li><strong>Vehicle:</strong>No</li>
+                        <li><strong>Practice space:</strong>Yes</li>
+                        <li><strong>Alcohol:</strong>Yes</li>
+                    </ul>
+                </div>
+                <div class="infosmall">
+                    <ul class="profileinfo2">
+                        <h4>Favorite Bands:</h4>
+                        <li>Superchunk</li>
+                        <li>The Wonder Years</li>
+                        <li>Drug Church</li>
+                        <li>The Movielife</li>
+                        <li>Guided By Voices</li>
+                    </ul>
+                </div>
             </div>
         </div>
-        <a href="profileview-musician.html"><div class="viewprofile">
-            <h2>View Profile</h2>
+        <div class="infobig clearfix">
+            <p>Ohio transplant. Lover of good coffee and Miller Lite. Easygoing but intense. The Tim Duncan of dumpster fires. Influences as a vocalist include Vinnie Caruana, Damian Abraham, and Aaron Bedard. Influences as a drummer include Jon Wurster, George Rebelo, and Keith Moon.</p>
+        </div>
+        <div class="soundcloud">
+            <h2>Soundcloud</h2>
+        </div>
+        <a href="browseviewmusician.html"><div class="backtobrowse">
+            <h2>Back to Browse</h2>
         </div></a>
-        <div class="browsefooter">
-            <img class="browseicon" id="stop" src="img/stopbutton.png"></img>
-            <img class="browseicon" id="play" src="img/playbutton.svg"></img>
-            <a href="browseview-musician-2.html"><img class="browseicon" id="seek" src="img/seekbutton.png"></img></a>
-        </div>
     </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
